src/test/deca/syntax/valid/synt/UnaryMinus2.deca
// Description:
//    Programme pour teste UnaryMinus
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022
{
    float i=-true;
}