src/test/deca/syntax/invalid/synt/OpArith2.deca
// Description:
//    Programme opArithmetique avec probleme d'assignement
//
// Resultats:
//      Invalide Lvalue Error: left-hand side of assignment is not an lvalue
// Historique:
//    cree le 01/01/2022
{
    5+3=8;
}